--- a/appinfo.json
+++ b/appinfo.json
@@ -15,8 +15,8 @@
         "basalt"
     ],
     "uuid": "597f4c41-611e-412a-abdf-54ac00170367",
-    "versionLabel": "1.0",
+    "versionLabel": "0.0.1",
     "watchapp": {
-        "watchface": false
+        "watchface": true
     }
 }
