--- a/appinfo.json
+++ b/appinfo.json
@@ -18,5 +18,26 @@
     "versionLabel": "0.1",
     "watchapp": {
         "watchface": true
+    },
+    "resources": {
+      "media": [
+        {
+          "type": "font",
+          "name": "FONT_PERFECT_DOS_48",
+          "file": "fonts/perfect-dos-vga.ttf",
+          "compatibility":"2.7"
+        },
+        {
+          "type":"font",
+          "name":"FONT_PERFECT_DOS_20",
+          "file":"fonts/perfect-dos-vga.ttf",
+          "compatibility": "2.7"
+        },
+        {
+          "type": "png",
+          "name": "IMAGE_BACKGROUND",
+          "file": "images/background.png"
+        }
+      ]
     }
 }
